tests/codegen/fail/input_object/enum/derive_default_value.rs
use juniper::GraphQLInputObject;

#[derive(GraphQLInputObject)]
enum Object {
    #[graphql(default)]
    Test(String),
}

fn main() {}
